fix a bug with the text alignment
Previously element was centered but text was not.  Now text is
centered.

On branch main
Your branch is ahead of 'origin/main' by 2 commits.
  (use "git push" to publish your local commits)

Changes to be committed:
	modified:   foundations/01-css-methods/styles.css

--- a/foundations/01-css-methods/styles.css
+++ b/foundations/01-css-methods/styles.css
@@ -3,5 +3,5 @@ div {
     color: white;
     font-size: 32px;
     font-weight: bold;
-    align-content: center;
+    text-align: center;
 }
